Project

General

Profile

Actions

Bug #22483

closed

mds: check for CEPH_OSDMAP_FULL is now wrong; cluster full flag is obsolete

Added by Patrick Donnelly over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Urgent
Category:
-
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):


Related issues 3 (0 open3 closed)

Related to CephFS - Bug #22475: qa: full flag not set on osdmap for tasks.cephfs.test_full.TestClusterFull.test_full_different_fileResolvedPatrick Donnelly12/19/2017

Actions
Related to CephFS - Bug #22482: qa: MDS can apparently journal new file on "full" metadata poolWon't FixPatrick Donnelly12/19/2017

Actions
Copied to CephFS - Backport #22579: luminous: mds: check for CEPH_OSDMAP_FULL is now wrong; cluster full flag is obsoleteResolvedShinobu KinjoActions
Actions #1

Updated by Patrick Donnelly over 6 years ago

  • Related to Bug #22475: qa: full flag not set on osdmap for tasks.cephfs.test_full.TestClusterFull.test_full_different_file added
Actions #2

Updated by Patrick Donnelly over 6 years ago

  • Related to Bug #22482: qa: MDS can apparently journal new file on "full" metadata pool added
Actions #3

Updated by Patrick Donnelly over 6 years ago

  • Status changed from New to In Progress
Actions #4

Updated by Patrick Donnelly over 6 years ago

  • Status changed from In Progress to Pending Backport
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #22579: luminous: mds: check for CEPH_OSDMAP_FULL is now wrong; cluster full flag is obsolete added
Actions #6

Updated by Patrick Donnelly about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF