mds: check metadata pool not cluster is full

CEPH_OSDMAP_FULL flag was obsoleted by
d61d20d0dc4d9f76f4e802e945a4b32a1207c6b6. So, check if the metadata pool is
full instead which is a decent proxy (as metadata operations can still
proceed). However, the data pool may still be full which would result in some
operations still not completing (like inode backtrace updates).

Fixes: http://tracker.ceph.com/issues/22483

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>